# SignLine

./: app_state.py  pyproject.toml  splash_screen.py  ui_permissions.py
.github/workflows/: main.yml
services/: __init__.py  audio_filter.py  bluetooth_service.py  mic_capture.py  permission_service.py  speech_engine.py  stt_service.py
tabs/: settings_tab.py  speech_tab.py
